# god-news

./: .env.example  .gitattributes  .gitignore  .npmrc  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  start.cmd
.github/workflows/: ci.yml
assets/demo-owned/: community-fridge-source.html  community-fridge-source.provenance.json  community-library-source.html  library-volunteers.provenance.json  (+8 more)
docs/: frontend-api-mapping.md  live2d-motion-stability-audit.md  tts-voice-profiles.md  video-template-audit.md  visual-assets.md
frontend/: eslint.config.js  index.html  openapi.json  package.json  playwright.config.ts  vite.config.ts
scripts/: analyze_live2d_video.py  export_openapi.py  render_live2d_host.py  run_e2e_video.py  run_live2d_ab_experiments.py  start.ps1  stop.ps1
tests/: __init__.py  conftest.py  test_api.py  test_config.py  test_container.py  test_fetchers.py  test_fsm.py  test_live2d_control.py  test_live2d_diagnostics.py  test_live2d_experiment_evidence.py  test_live_script_role_guard.py  test_llm_adapter.py  test_memory.py  test_operations.py  test_processes.py  test_repository.py  test_script_language_contract.py  test_source_collection_rate_limit.py  test_source_collectors.py  test_source_health.py  test_source_integration.py  test_source_media.py  test_source_normalizers.py  test_source_runs.py  test_source_schedule.py  test_source_transcriptions.py  test_story_lifecycle_contract.py  test_tts_adapter.py  test_video_batches.py  test_video_live2d.py  test_video_remotion.py  test_video_source_assets.py  test_video_templates.py  test_visual_assets.py  test_workflow.py
video/: README.md  package.json  tsconfig.json  vitest.config.ts
(+220 files in other folders)
